PO-495: Add infrastructure code for new DB tables