@@ -6,6 +6,8 @@ import com.nimbusds.jose.proc.SecurityContext;
 import uk.gov.hmcts.opal.authentication.exception.AuthenticationException;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public interface AuthProviderConfigurationProperties {
@@ -22,11 +24,11 @@ public interface AuthProviderConfigurationProperties {
 
     default JWKSource<SecurityContext> getJwkSource() {
         try {
-            URL jwksUrl = new URL(getJwkSetUri());
+            URL jwksUrl = new URI(getJwkSetUri()).toURL();
 
             return JWKSourceBuilder.create(jwksUrl).build();
-        } catch (MalformedURLException malformedUrlException) {
-            throw new AuthenticationException("Sorry authentication jwks URL is incorrect");
+        } catch (MalformedURLException | URISyntaxException malformedUrlException) {
+            throw new AuthenticationException("Sorry authentication jwks URL (" + getJwkSetUri() + ") is incorrect");
         }
     }
 }
